--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -6,3 +6,10 @@ mat-toolbar {
 .spacer {
   flex: 1 1 auto; // Flexible space that pushes navigation buttons to the right
 }
+
+header {
+  width: 100%;
+  max-width: 100vw;
+  margin: 0;
+  box-sizing: border-box;
+}
